  * The fasl file format has changed again, to allow the compiler's
    INFO database to support symbol macros.
  * The user manual (in doc/) is formatted into HTML more nicely.
    (thanks to coreythomas)
  * The system is smarter about SUBTYPEP relationships, especially
    those involving NOT types (including types such as ATOM which are
    represented internally using NOT types). Thus SUBTYPEP is less
    likely to return (VALUES NIL NIL) in general, and in particular
    bugs 58 and (the remaining bits of) bug 50 are fixed. (thanks to
    Christophe Rhodes)
  * The fasl file format has changed again, because the internal
    representation of types now includes a new slot to support the new
    SUBTYPEP-of-NOT-types logic.
  * (not a change in the main branch of SBCL, but a related prototype
    which can hopefully be merged into the main branch of SBCL in the
    future:) Brian Spilsbury has produced a Unicode-enabled variant of
    sbcl-0.7.0, available as a patch against sbcl-0.7.0 at
      <http://designix.com.au/brian/SBCL/sbcl-0.7.0-unicode.p0.gz>.
  * Bugfix to GET-DISPATCH-MACRO-CHAR, now returning NIL for undefined
    dispatch macro character combinations (thanks to Alexey Dejenka)

planned incompatible changes in 0.7.x:
* When the profiling interface settles down, maybe in 0.7.x, maybe
  later, it might impact TRACE. They both encapsulate functions, and
  it's not clear yet how e.g. UNPROFILE will interact with TRACE
  and UNTRACE. (This shouldn't matter, though, unless you are
  using profiling. If you never profile anything, TRACE should
  continue to behave as before.)
* Inlining can now be controlled the ANSI way, without
  MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
  now does what ANSI says it should. The CMU-CL-style 
  SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.