@@ -1543,7 +1543,7 @@ needed by the current implementation of SBCL, and makes
 no guarantees of interface stability."
     :use ("CL" "SB!ALIEN" "SB!EXT" "SB!INT" "SB!SYS")
     :export (;; wrappers around Unix stuff to give just what Lisp needs
-	     "UID-USERNAME"
+	     "UID-USERNAME" "UID-HOMEDIR"
 
 	     ;; stuff with a one-to-one mapping to Unix constructs
 	     "D-INO" "D-NAME" "D-NAMLEN" "D-OFF" "D-RECLEN"
